# high-way-branch-v2

./: .gitignore  .pre-commit-config.yaml  README.md  high-way-branch.code-workspace  high-way.add.xml  high-way.net.xml  high-way.settings.xml  high-way.sumocfg  pyproject.toml  template.rou.xml
.claude/: settings.json
.claude-memory/: MEMORY.md  class-centric-organization.md  japanese-for-user-communication.md  no-direct-push-to-main.md  raise-on-unexpected-input.md  uv-migration-status.md  v1-frozen-no-longer-used.md
.github/: CODEOWNERS
TraCI/: custom.py  default.py  fixed_custom.py  main.py  simple.py  v2.py
TraCI/PathPlanning/FrenetOptimalTrajectory/: frenet_junction.py  frenet_merge.py
TraCI/SimulationStatistics/: simulation_statistics.py
TraCI/cav/: base_cav.py  constants.py  custom_cav.py  default_cav.py  fixed_custom_cav.py  simple_cav.py
TraCI/func/: cav.py  custom_cav.py  default_cav.py  simple_cav.py
TraCI/simulationStatistics/: .gitignore  simulation_statistics.py
TraCI/simulationStatistics/paperEvaluation/4200_30/: custom_4200_30.csv  custom_tail_positions_4200_30.csv  simple_4200_30.csv  simple_tail_positions_4200_30.csv
TraCI/simulationStatistics/paperEvaluation/4200_35/: custom_4200_35.csv  custom_tail_positions_4200_35.csv  simple_4200_35.csv  simple_tail_positions_4200_35.csv
TraCI/simulationStatistics/paperEvaluation/4200_40/: custom_4200_40.csv  custom_tail_positions_4200_40.csv  simple_4200_40.csv  simple_tail_positions_4200_40.csv  tail_positions_4200_40.csv
TraCI/simulationStatistics/statistics/custom/: calculate_avrage_tail_pos.py
TraCI/simulationStatistics/statistics/simple/: calculate_avrage_tail_pos.py
TraCI/status/: status.py
TraCI/utils/: traci_wrapper.py
TraCI/v1/: custom.py  default.py  simple.py
TraCI/v1/cav/: base_cav.py  constants.py  custom_cav.py  default_cav.py  simple_cav.py
TraCI/v2/: __main__.py  constants.py  environment.py  geometry.py  lc_request.py  obstacle.py  pair_executor.py  priority.py  rsu.py  safety.py  simulation.py  simulation_state.py  snapshot.py  v2_cav.py
TraCI/v2/layer1/: __init__.py  priority.py  rsu.py
TraCI/v2/layer2/: __init__.py  pair_executor.py  safety.py
TraCI/v2_core/: constants.py  geometry.py  lc_request.py  pair_executor.py  priority.py  rsu.py  safety.py  simulation_state.py  snapshot.py  v2_cav.py
config/: high-way.net.xml  high-way.rou.xml  high-way.settings.xml  high-way.sumocfg  high-way.view.xml
config/v1/: high-way.sumocfg
config/v1-fast/: high-way.net.xml  high-way.rou.xml
config/v2/: merge.net.xml
config/v2/blockage/: blockage.rou.xml  blockage.sumocfg
config/v2/diverge/: build.sh  diverge.con.xml  diverge.edg.xml  diverge.net.xml  diverge.nod.xml  diverge.rou.xml  diverge.sumocfg
config/v2/merge/: build.sh  merge.con.xml  merge.edg.xml  merge.net.xml  merge.nod.xml  merge.rou.xml  merge.sumocfg  merge.view.xml
config/v2/straight/: straight.edg.xml  straight.net.xml  straight.nod.xml  straight.rou.xml  straight.sumocfg  straight.view.xml
config/v2/weave/: build.sh  weave.con.xml  weave.edg.xml  weave.net.xml  weave.nod.xml  weave.rou.xml  weave.sumocfg
config/v2/weave2/: build.sh  weave2.con.xml  weave2.edg.xml  weave2.net.xml  weave2.nod.xml  weave2.rou.xml  weave2.sumocfg
docs/: custom-behavior.md  実装計画_EDF統一調停.md  実装計画_EDF統一調停_確定版.md
scripts/: link-memory.sh
scripts/eval/: README.md  aggregate.py  compare_fix.py  make_figures.py  run_sweep.py
tests/golden/: .gitignore  README.md  run_golden.py
