[tool.poetry]
name = "high-way-branch"
version = "0.1.0"
description = "2024 Research"
authors = ["TaikiKunimoto <taiki416avicii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
traci = "^1.21.0"
eclipse-sumo = "^1.21.0"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
watchdog = "^4.0.1"
ruff = "^0.8.1"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
exclude = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".tox",
  ".venv",
  "_build",
  "buck-out",
  "build",
  "dist",
  "backend_env",
]

[tool.ruff.lint]
# 必要なエラーコードを選択し、不要な警告を ignore で除外します
select = ["E", "F", "W", "C", "B", "T", "R", "RUF"]
ignore = [
  "E203",   # whitespace-before-punctuation
  "E501",   # line-too-long
  "C901",   # complex-structure
  "B008",   # function-call-in-default-argument
  "B006",   # mutable-argument-default
  "B017",   # assert-raises-exception
  "B904",   # raise-without-from-inside-except
  "T201",   # print
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "RET504", # superfluous-else-break
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
plugins = "sqlalchemy.ext.mypy.plugin"

[[tool.mypy.overrides]]
module = [
  "traci",
  "pandas",
]
ignore_missing_imports = true
