[project]
name = "high-way-branch"
version = "0.1.0"
description = "2024 Research"
authors = [{ name = "TaikiKunimoto", email = "taiki416avicii@gmail.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "traci>=1.21.0,<2",
    "numpy>=2.1.3,<3",
    "matplotlib>=3.9.2,<4",
    "pandas>=2.2.3,<3",
    "pydantic>=2.10.6,<3",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0,<3",
    "watchdog>=6.0.0,<7",
    "ruff>=0.15.0,<0.16",
    "pre-commit>=4.6.0,<5",
]

[tool.uv]
default-groups = "all"
package = false
# traci/sumolib は SUMO 本体とのバージョン整合のため 1.22 系に固定
# （1.27 への引き上げは実機SUMOでの動作確認後に別途実施）
constraint-dependencies = ["traci==1.22.*", "sumolib==1.22.*"]

[tool.ruff]
line-length = 119
exclude = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".tox",
  ".venv",
  "_build",
  "buck-out",
  "build",
  "dist",
  "backend_env",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "B", "T", "R", "RUF"]
ignore = [
  "E203",   # whitespace-before-punctuation
  "E501",   # line-too-long
  "C901",   # complex-structure
  "B008",   # function-call-in-default-argument
  "B006",   # mutable-argument-default
  "B017",   # assert-raises-exception
  "B904",   # raise-without-from-inside-except
  "T201",   # print
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "RET504", # superfluous-else-break
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true

[tool.mypy]
# TraCI/ をパッケージルートとして解決（cav, utils, status などを top-level import 可能に）
mypy_path = "TraCI"
files = ["TraCI"]
namespace_packages = true
explicit_package_bases = true
strict = true
report_missing_type_stubs = false

[[tool.mypy.overrides]]
module = [
  "traci",
  "pandas",
  "sumolib",
  "matplotlib.*",
]
ignore_missing_imports = true
